# nanoPOPIXA

./: .gitignore  CLAUDE.md  LICENSE  README.md  chat.py  data_prep.py  model.py  monitor.py  popixa_cli.py  pyproject.toml  scrape.py  session_cache.py  setup.py  splash.py  train.py
.github/workflows/: ci.yml
data_polyglot/: meta.pkl
